@@ -17,6 +17,7 @@ package one.tomorrow.transactionaloutbox.reactive.service;
 
 import one.tomorrow.transactionaloutbox.reactive.AbstractIntegrationTest;
 import one.tomorrow.transactionaloutbox.reactive.KafkaTestSupport;
+import one.tomorrow.transactionaloutbox.commons.ProxiedContainerSupport;
 import one.tomorrow.transactionaloutbox.reactive.model.OutboxRecord;
 import one.tomorrow.transactionaloutbox.reactive.repository.OutboxRepository;
 import org.apache.kafka.clients.consumer.Consumer;
@@ -30,24 +31,23 @@ import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.test.context.DynamicPropertyRegistry;
 import org.springframework.test.context.DynamicPropertySource;
-import org.testcontainers.containers.ToxiproxyContainer.ContainerProxy;
 import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
 
 import java.time.Duration;
 import java.util.*;
 import java.util.concurrent.atomic.AtomicBoolean;
+import java.util.concurrent.atomic.AtomicInteger;
 import java.util.stream.IntStream;
 
 import static java.util.Comparator.comparing;
 import static java.util.stream.Collectors.toList;
+import static one.tomorrow.transactionaloutbox.commons.CommonKafkaTestSupport.*;
 import static one.tomorrow.transactionaloutbox.commons.KafkaHeaders.HEADERS_SEQUENCE_NAME;
 import static one.tomorrow.transactionaloutbox.commons.Longs.toLong;
 import static one.tomorrow.transactionaloutbox.reactive.IntegrationTestConfig.DEFAULT_OUTBOX_LOCK_TIMEOUT;
 import static one.tomorrow.transactionaloutbox.reactive.KafkaTestSupport.*;
-import static one.tomorrow.transactionaloutbox.reactive.ProxiedKafkaContainer.bootstrapServers;
-import static one.tomorrow.transactionaloutbox.reactive.ProxiedKafkaContainer.kafkaProxy;
-import static one.tomorrow.transactionaloutbox.reactive.ProxiedPostgreSQLContainer.postgresProxy;
+import static one.tomorrow.transactionaloutbox.commons.ProxiedKafkaContainer.bootstrapServers;
 import static one.tomorrow.transactionaloutbox.reactive.TestUtils.newRecord;
 import static org.apache.kafka.clients.producer.ProducerConfig.*;
 import static org.awaitility.Awaitility.await;
@@ -60,6 +60,7 @@ class OutboxProcessorIntegrationTest extends AbstractIntegrationTest implements 
 
     private static final String topic1 = "topicOPIT1";
     private static final String topic2 = "topicOPIT2";
+    private static final AtomicInteger processorIdx = new AtomicInteger(0);
 
     private static Consumer<String, byte[]> consumer;
 
@@ -92,16 +93,20 @@ class OutboxProcessorIntegrationTest extends AbstractIntegrationTest implements 
         testee.close();
     }
 
+    private static String lockOwnerId() {
+        return "processor-" + processorIdx.incrementAndGet();
+    }
+
     @Test
     void should_processRecordsInOrder() {
         // given
         String eventSource = "test";
-        testee = new OutboxProcessor(repository, lockService, producerFactory(), Duration.ofMillis(50), DEFAULT_OUTBOX_LOCK_TIMEOUT, "processor", eventSource);
+        testee = new OutboxProcessor(repository, lockService, producerFactory(), Duration.ofMillis(50), DEFAULT_OUTBOX_LOCK_TIMEOUT, lockOwnerId(), eventSource);
 
         // when
         List<OutboxRecord> outboxRecords = IntStream.range(1, 100).mapToObj(i ->
                 repository.save(newRecord(topic1, "key", "value" + i)).block()
-        ).collect(toList());
+        ).toList();
 
         logger.info("Test created records");
 
@@ -118,15 +123,15 @@ class OutboxProcessorIntegrationTest extends AbstractIntegrationTest implements 
     void should_startWhenKafkaIsNotAvailable_and_processOutboxWhenKafkaBecomesAvailable() {
         // given
         OutboxRecord record = repository.save(newRecord(topic1, "key1", "value1")).retry().block();
-        kafkaProxy.setConnectionCut(true);
+        kafkaContainer.setConnectionCut(true);
 
         // when
         Duration processingInterval = Duration.ofMillis(50);
         String eventSource = "test";
-        testee = new OutboxProcessor(repository, lockService, producerFactory(), processingInterval, DEFAULT_OUTBOX_LOCK_TIMEOUT, "processor", eventSource);
+        testee = new OutboxProcessor(repository, lockService, producerFactory(), processingInterval, DEFAULT_OUTBOX_LOCK_TIMEOUT, lockOwnerId(), eventSource);
 
         sleep(processingInterval.plusMillis(200));
-        kafkaProxy.setConnectionCut(false);
+        kafkaContainer.setConnectionCut(false);
 
         // then
         ConsumerRecords<String, byte[]> kafkaRecords = getAndCommitRecords();
@@ -143,7 +148,7 @@ class OutboxProcessorIntegrationTest extends AbstractIntegrationTest implements 
         Map<String, Object> producerProps = producerPropsWithShortTimeouts(requestTimeout);
         Duration processingInterval = Duration.ofMillis(50);
         int batchSize = 100;
-        testee = new OutboxProcessor(repository, lockService, producerFactory(producerProps), processingInterval, DEFAULT_OUTBOX_LOCK_TIMEOUT, "processor", eventSource, batchSize);
+        testee = new OutboxProcessor(repository, lockService, producerFactory(producerProps), processingInterval, DEFAULT_OUTBOX_LOCK_TIMEOUT, lockOwnerId(), eventSource, batchSize);
 
         // when
         int numRecords = 500;
@@ -156,7 +161,7 @@ class OutboxProcessorIntegrationTest extends AbstractIntegrationTest implements 
         // toggle connection as long as there are unprocessed records
         // - wait until the first element is saved, otherwise the first time the first record might not yet be saved
         outboxRecordMonos.stream().findFirst().orElseThrow().doOnNext(savedRecord ->
-                toggleConnectionWhileNonEmpty(repository.getUnprocessedRecords(1), requestTimeout.multipliedBy(3), kafkaProxy)
+                toggleConnectionWhileNonEmpty(repository.getUnprocessedRecords(1), requestTimeout.multipliedBy(3), kafkaContainer)
         ).subscribe();
 
         // then
@@ -174,7 +179,7 @@ class OutboxProcessorIntegrationTest extends AbstractIntegrationTest implements 
         String eventSource = "test";
         Duration processingInterval = Duration.ofMillis(2);
         int batchSize = 5; // use a smaller batch size so that batch management (locking etc) is likely to happen during a cut connection
-        testee = new OutboxProcessor(repository, lockService, producerFactory(), processingInterval, DEFAULT_OUTBOX_LOCK_TIMEOUT, "processor", eventSource, batchSize);
+        testee = new OutboxProcessor(repository, lockService, producerFactory(), processingInterval, DEFAULT_OUTBOX_LOCK_TIMEOUT, lockOwnerId(), eventSource, batchSize);
 
         // when
         int numRecords = 500;
@@ -187,7 +192,7 @@ class OutboxProcessorIntegrationTest extends AbstractIntegrationTest implements 
         // toggle connection as long as there are unprocessed records
         // - wait until the first element is saved, otherwise the first time the first record might not yet be saved
         outboxRecordMonos.stream().findFirst().orElseThrow().doOnNext(savedRecord ->
-                toggleConnectionWhileNonEmpty(repository.getUnprocessedRecords(1), processingInterval, postgresProxy)
+                toggleConnectionWhileNonEmpty(repository.getUnprocessedRecords(1), processingInterval, postgresqlContainer)
         ).subscribe();
 
         // then
@@ -206,22 +211,22 @@ class OutboxProcessorIntegrationTest extends AbstractIntegrationTest implements 
                 .collect(toList());
     }
 
-    private void toggleConnectionWhileNonEmpty(Flux<?> records, Duration toggleInterval, ContainerProxy proxy) {
+    private void toggleConnectionWhileNonEmpty(Flux<?> records, Duration toggleInterval, ProxiedContainerSupport proxiedContainer) {
         AtomicBoolean connected = new AtomicBoolean(true);
         records.collectList()
                 .retry()
                 // cut connection
-                .doOnNext(unused -> toggleConnection(proxy, connected))
+                .doOnNext(unused -> toggleConnection(connected, proxiedContainer))
                 .delayElement(toggleInterval)
                 // restore connection (needed so that the next round/check can work at all)
-                .doOnNext(unused -> toggleConnection(proxy, connected))
+                .doOnNext(unused -> toggleConnection(connected, proxiedContainer))
                 .delayElement(toggleInterval)
                 .repeatWhen(elementsReturned -> elementsReturned.flatMap(x -> x > 0 ? Mono.just(true) : Mono.empty()))
                 .subscribe();
     }
 
-    private void toggleConnection(ContainerProxy proxy, AtomicBoolean connected) {
-        proxy.setConnectionCut(connected.getAndSet(!connected.get()));
+    private void toggleConnection(AtomicBoolean connected, ProxiedContainerSupport proxiedContainer) {
+        proxiedContainer.setConnectionCut(connected.getAndSet(!connected.get()));
     }
 
     private Collection<ConsumerRecord<String, byte[]>> consumeAndDeduplicateRecords(int minRecords, Duration timeout) {
